Bug 165577 - Bibliography (by Document Content) can no longer be added due to type combo box being empty
Summary: Bibliography (by Document Content) can no longer be added due to type combo b...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: dolezvo1
URL:
Whiteboard: target:25.8.0 target:25.2.3 target:24...
Keywords: bibisected, bisected, regression
: 166310 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-05 06:04 UTC by Panos Stokas
Modified: 2025-05-15 16:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Panos Stokas 2025-03-05 06:04:20 UTC
Description:
It's impossible to add new document content bibliography entries because the type combo box is empty. I'm experiencing this on Windows, but another user has reported it on Linux here: https://bbs.archlinux.org/viewtopic.php?id=303903

This is a regression in the latest versions. Both 25.8.5 and 25.2.1 are affected; I had to downgrade to 24.8.4 to be able to use LibreOffice.

Steps to Reproduce:
1. Insert Bibliography Entry
2. Select Document Content
3. Click New
4. Click on the Type combobox

Actual Results:
the Type combobox is empty

Expected Results:
the Type combobox should provide several types of bibliography types


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.8.4.1 (x86) / LibreOffice Community
Build ID: 1be9007f5d86a3741c366527d13e2970cbeef057
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19044); UI render: Skia/Raster; VCL: win
Locale: el-GR (el_GR); UI: en-US
Calc: CL threaded
Comment 1 Buovjaga 2025-03-05 06:27:43 UTC
Based on the description, could be due to the fix to bug 164179. Let's check in a moment.
Comment 2 Buovjaga 2025-03-05 06:50:49 UTC
Yes indeed: flipping between b0299c4141f80dfd9989f1f376a960a9590f7a07 and the preceding one in linux-64-25.8 bibisect repo confirms it.
Comment 3 dolezvo1 2025-03-05 15:17:59 UTC
Hi, I'm disappointed I didn't catch this, and I apologize for this. I haven't tested it, but I think it's probably this piece of code here, because it doesn't seem to correspond to any of the old code. I would guess I wanted to clear the value, but didn't imagine the method actually clears the available options instead:

```
+ else
+ {
+     m_xTypeListBox->clear();
+ }
```
Comment 4 dolezvo1 2025-03-06 14:33:45 UTC
I just submitted a patch that solves this issue, as well as another regression introduced in that commit (i.e. short name being deleted when clicking Edit after creating a new entry).
Comment 5 Commit Notification 2025-03-20 11:35:53 UTC
Vojtěch Doležal committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8adf0851ee87475d9abe133de8076b39876292e5

tdf#165577 Fix bibliography regressions

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-03-21 03:27:52 UTC
Vojtěch Doležal committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/9c2d977e27e09d02e2e98090c4c2e433ad8abc79

tdf#165577 Fix bibliography regressions

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-03-24 15:53:15 UTC
Vojtěch Doležal committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/5347fc84252b059725e59f6808a8cae9e0403c07

tdf#165577 Fix bibliography regressions

It will be available in 24.8.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 dolezvo1 2025-03-24 17:46:27 UTC
Should hopefully be fixed everywhere now!
Comment 9 Mateusz Wlazłowski 2025-05-15 16:10:36 UTC
*** Bug 166310 has been marked as a duplicate of this bug. ***