tdf#165577 Fix bibliography regressions

Fix regressions introduced in b0299c4141f80dfd9989f1f376a960a9590f7a07, i.e.:

1) Do not clear bibliography type options to allow new bibliography entry creations

2) Set the short name so that it is not deleted when clicking Edit after creation

Change-Id: Id3d500872cbbb578fc45cdf75f0b7f7f89144aa0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182586
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins